--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -84,6 +84,11 @@
 			color: #f06431;
 		}
 
+		.panel-left hr {
+			margin-block: .25em;
+			border-color: var(--r-main-color);
+		}
+
 		.panel-right {
 			flex: 1;
 		}
@@ -309,6 +314,7 @@ console.log("zip file data:", zipData)</code>
 					<div class="panel panel-left">
 						<pre><strong>index.html</strong></pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/utils-zip.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -325,6 +331,7 @@ console.log("zip file data:", zipData)</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/utils-zip.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -341,6 +348,7 @@ console.log("zip file data:", zipData)</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre><strong>lib/utils-zip.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -357,6 +365,7 @@ console.log("zip file data:", zipData)</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/utils-zip.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -443,8 +452,7 @@ await zipReader.close()</code>
 							<li class="fragment">script de la bibliothèque zip.js (<a
 									href="dist/steps/04/assets/zip.min.js" target="_blank">assets/zip.min.js</a>)</li>
 							<li class="fragment">script affichant le contenu du fichier zip (<a
-									href="dist/steps/04/assets/main.js"
-									target="_blank">assets/main.js</a>)</li>
+									href="dist/steps/04/assets/main.js" target="_blank">assets/main.js</a>)</li>
 						</ul>
 					</li>
 				</ul>
@@ -496,9 +504,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre><strong>index.html</strong></pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -515,9 +525,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -534,9 +546,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre><strong>lib/html-template.js</strong></pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -553,9 +567,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre><strong>lib/utils.js</strong></pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -572,9 +588,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre><strong>lib/html-template.js</strong></pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -591,9 +609,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -610,9 +630,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre><strong>lib/utils.js</strong></pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -629,9 +651,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -648,9 +672,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre><strong>lib/utils-zip.js</strong></pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -667,9 +693,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -686,9 +714,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre><strong>lib/html-template.js</strong></pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -705,9 +735,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -729,9 +761,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -753,9 +787,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -778,9 +814,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -833,9 +871,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -966,9 +1006,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -985,9 +1027,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre><strong>lib/html-template.js</strong></pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1008,9 +1052,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1027,9 +1073,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre><strong>lib/utils-zip.js</strong></pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1046,9 +1094,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1069,9 +1119,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre><strong>lib/html-template.js</strong></pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1088,9 +1140,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -1113,9 +1167,11 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -1426,10 +1482,12 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1446,10 +1504,12 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre><strong>lib/utils-png.js</strong></pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1466,10 +1526,12 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1486,10 +1548,12 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre><strong>lib/html-template.js</strong></pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1506,10 +1570,12 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1526,10 +1592,12 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -1552,10 +1620,12 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -1579,10 +1649,12 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -1605,11 +1677,14 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
+						<hr>
 						<pre><strong>project/index.html</strong></pre>
 					</div>
 					<div class="panel panel-right">
@@ -1626,11 +1701,14 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre>index.js</pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre><strong>assets/main.js</strong></pre>
+						<hr>
 						<pre>project/index.html</pre>
 					</div>
 					<div class="panel panel-right">
@@ -1647,11 +1725,14 @@ await zipReader.close()</code>
 					<div class="panel panel-left">
 						<pre>index.html</pre>
 						<pre><strong>index.js</strong></pre>
+						<hr>
 						<pre>lib/html-template.js</pre>
 						<pre>lib/utils.js</pre>
 						<pre>lib/utils-zip.js</pre>
 						<pre>lib/utils-png.js</pre>
+						<hr>
 						<pre>assets/main.js</pre>
+						<hr>
 						<pre>project/index.html</pre>
 					</div>
 					<div class="panel panel-right">
