make separator thiner

--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -87,6 +87,7 @@
 		.panel-left hr {
 			margin-block: .25em;
 			border-color: var(--r-main-color);
+			border-width: .5px;
 		}
 
 		.panel-right {
