--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -162,6 +162,9 @@
 						<pre><strong>project/index.html</strong></pre>
 						<pre>project/script.js</pre>
 						<pre>project/style.css</pre>
+						<pre>project/properties.css</pre>
+						<pre>project/image.png</pre>
+						<pre>project/background.png</pre>
 					</div>
 					<div class="panel panel-right">
 						<pre>
@@ -177,6 +180,9 @@
 						<pre>project/index.html</pre>
 						<pre><strong>project/script.js</strong></pre>
 						<pre>project/style.css</pre>
+						<pre>project/properties.css</pre>
+						<pre>project/image.png</pre>
+						<pre>project/background.png</pre>
 					</div>
 					<div class="panel panel-right">
 						<pre>
@@ -192,6 +198,9 @@
 						<pre><strong>project/index.html</strong></pre>
 						<pre>project/script.js</pre>
 						<pre>project/style.css</pre>
+						<pre>project/properties.css</pre>
+						<pre>project/image.png</pre>
+						<pre>project/background.png</pre>
 					</div>
 					<div class="panel panel-right">
 						<pre>
@@ -207,6 +216,9 @@
 						<pre>project/index.html</pre>
 						<pre>project/script.js</pre>
 						<pre><strong>project/style.css</strong></pre>
+						<pre>project/properties.css</pre>
+						<pre>project/image.png</pre>
+						<pre>project/background.png</pre>
 					</div>
 					<div class="panel panel-right">
 						<pre>
