--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -323,6 +323,10 @@ console.log("zip file data:", zipData)</code>
 			<section>
 				<h2>Intégration dans le projet</h2>
 				<p>Création du fichier ZIP</p>
+			</section>
+			<section>
+				<h2>Intégration dans le projet</h2>
+				<p>Création du fichier ZIP</p>
 				<div class="panels">
 					<div class="panel panel-left">
 						<pre><strong>index.html</strong></pre>
@@ -405,6 +409,10 @@ for (const entry of entries) {
 
 await zipReader.close()</code>
 			</pre>
+			</section>
+			<section>
+				<h2>Intégration dans le projet</h2>
+				<p>Lecture du fichier ZIP</p>
 			</section>
 			<section>
 				<h2>Intégration dans le projet</h2>
