--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1686,7 +1686,7 @@ await zipReader.close()</code>
 					</div>
 				</div>
 				<iframe loading="lazy" src="dist/steps/15/index.html" class="small fragment"></iframe>
-				<p class="fragment">L'image principale est stockée en double dans le fichier ⚠️</p>
+				<p class="fragment">L'image principale est stockée en double dans le fichier 🤔</p>
 			</section>
 			<section>
 				<h2>Fichier polyglotte HTML/ZIP/PNG </h2>
