--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -53,12 +53,15 @@
 		.reveal pre {
 			margin: 0;
 			box-shadow: none;
-			width: 85%;
 		}
 
 		.reveal code,
 		.reveal a {
 			color: #555;
+		}
+
+		.reveal .panel-right pre {
+			width: 950px;
 		}
 
 		.reveal .panel-right pre>code {
