--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1754,7 +1754,7 @@ await zipReader.close()</code>
 			<section>
 				<h2>Conclusion</h2>
 				<ul>
-					<li>Limitations de l'implémentation finale :
+					<li class="fragment">Limitations de l'implémentation finale :
 						<ul>
 							<li class="fragment">Résolution des dépendances faite manuellement</li>
 							<li class="fragment">Dépassement de la limite de 64Ko de données après le fichier ZIP
