--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1043,7 +1043,7 @@ await zipReader.close()</code>
 			</section>
 			<section>
 				<h2>Lecture du fichier ZIP depuis le DOM</h2>
-				<p>Ajout des données consolidées</p>
+				<p>Ajout des données consolidées dans la page HTML</p>
 				<div class="panels">
 					<div class="panel panel-left">
 						<pre>index.html</pre>
@@ -1064,7 +1064,7 @@ await zipReader.close()</code>
 			</section>
 			<section>
 				<h2>Lecture du fichier ZIP depuis le DOM</h2>
-				<p>Ajout des données consolidées</p>
+				<p>Ajout des données consolidées dans la page HTML</p>
 				<div class="panels">
 					<div class="panel panel-left">
 						<pre>index.html</pre>
@@ -1085,7 +1085,7 @@ await zipReader.close()</code>
 			</section>
 			<section>
 				<h2>Lecture du fichier ZIP depuis le DOM</h2>
-				<p>Ajout des données consolidées</p>
+				<p>Ajout des données consolidées dans la page HTML</p>
 				<div class="panels">
 					<div class="panel panel-left">
 						<pre>index.html</pre>
