--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -513,7 +513,8 @@ await zipReader.close()</code>
 		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;
+		&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -956,9 +957,7 @@ await zipReader.close()</code>
 		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext"
-									style="background-color: #CDFAD5; color: #777777;">      Données ZIP </code><code
-									class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -975,9 +974,7 @@ await zipReader.close()</code>
 		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext"
-									style="background-color: #CDFAD5; color: #777777;">      Données ZIP </code><code
-									class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -994,7 +991,8 @@ await zipReader.close()</code>
 		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;;">      Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;&lt;script type="text/json"&gt;</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Données de consolidation </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    &lt;/script&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;;">      Données ZIP </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    --&gt;
+		&lt;script type="text/json"&gt;</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Données de consolidation </code><code class="language-plaintext" style="background-color: #CDFAD5; color: #777777;">    &lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -1414,8 +1412,7 @@ await zipReader.close()</code>
 &lt;html&gt;
 	&lt;head&gt;
 		&lt;meta charset="windows-1252"&gt;
-		&lt;title&gt;Please wait...&lt;/title&gt;
-		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
+		...
 	&lt;/head&gt;
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;script type="text/json"&gt;</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données de consolidation </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    &lt;/script&gt;
@@ -1430,8 +1427,7 @@ await zipReader.close()</code>
 &lt;html&gt;
 	&lt;head&gt;
 		&lt;meta charset="windows-1252"&gt;
-		&lt;title&gt;Please wait...&lt;/title&gt;
-		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
+		...
 	&lt;/head&gt;
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Bloc(s) IDAT </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;script type="text/json"&gt;
@@ -1450,8 +1446,7 @@ await zipReader.close()</code>
 &lt;html&gt;
 	&lt;head&gt;
 		&lt;meta charset="windows-1252"&gt;
-		&lt;title&gt;Please wait...&lt;/title&gt;
-		&lt;script&gt;&lt;!-- Contenu de assets/zip.min.js --&gt;&lt;/script&gt;
+		...
 	&lt;/head&gt;
 	&lt;body&gt;
 		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Bloc(s) IDAT </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;script type="text/json"&gt;
