--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -50,6 +50,11 @@
 			text-align: left;
 		}
 
+		section h2 {
+			position: relative;
+			top: -15px;
+		}
+
 		.reveal pre {
 			margin: 0;
 			box-shadow: none;
