--- a/fr-FR/index.html
+++ b/fr-FR/index.html
@@ -1420,7 +1420,10 @@ await zipReader.close()</code>
 		...
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;script type="text/json"&gt;</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données de consolidation </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    &lt;/script&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données ZIP 
+		--&gt;&lt;script type="text/json"&gt;
+		  Données de consolidation
+		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
   &lt;/body&gt;
 &lt;/html&gt;</code></pre>
@@ -1435,7 +1438,9 @@ await zipReader.close()</code>
 		...
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Bloc(s) IDAT </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;script type="text/json"&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Bloc(s) IDAT </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--
+		  Données ZIP
+		--&gt;&lt;script type="text/json"&gt;
 		  Données de consolidation
 		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
@@ -1454,7 +1459,9 @@ await zipReader.close()</code>
 		...
 	&lt;/head&gt;
 	&lt;body&gt;
-		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Bloc(s) IDAT </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">      Données ZIP </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;script type="text/json"&gt;
+		&lt;p&gt;Please wait...&lt;/p&gt;&lt;!--</code><code class="language-plaintext" style="background-color: #FFCF96; color: #000000; text-align: center;"> Bloc(s) IDAT </code><code class="language-plaintext" style="background-color: #F6FDC3; color: #777777;">    --&gt;&lt;!--
+		  Données ZIP 
+		--&gt;&lt;script type="text/json"&gt;
 		  Données de consolidation
 		&lt;/script&gt;
 		&lt;script&gt;&lt;!-- Contenu de assets/main.js --&gt;&lt;/script&gt;
